--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "discord-bread",
-  "version": "0.0.1",
+  "name": "@ashyboxy/discord-bread",
+  "version": "1.0.0",
   "description": "Discord Library for Node.js that I develop in my free time for fun.",
   "main": "index.js",
   "types": "index.d.ts",
@@ -8,7 +8,7 @@
     "test": "node test.js"
   },
   "keywords": [],
-  "author": "Ashton Barnard",
+  "author": "Ashton Barnard <ashyboxy2@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "node-fetch": "^2.6.0",
