--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
   "scripts": {
     "test": "node test.js"
   },
-  "keywords": [],
+  "keywords": [
+    "discord",
+    "discordapp",
+    "api",
+    "bot",
+    "client"
+  ],
   "author": "Ashton Barnard <ashyboxy2@gmail.com>",
   "license": "MIT",
   "dependencies": {
